--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,6 +105,7 @@
         android:inputType="textPersonName"
         android:hint="Usuario o Correo"
         android:textColorHint="#bfbaba"
+        android:textColor="#FFFF"
         app:layout_constraintTop_toTopOf="@+id/h_linea3"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
@@ -121,6 +122,7 @@
         android:inputType="textPassword"
         android:hint="Contraseña"
         android:textColorHint="#bfbaba"
+        android:textColor="#FFFF"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/txt_user"
         android:layout_marginLeft="8dp"
