--- a/app/src/main/res/layout/app_bar_navi.xml
+++ b/app/src/main/res/layout/app_bar_navi.xml
@@ -6,22 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.teach.andalaardev.NaviActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"/>
-
-    </android.support.design.widget.AppBarLayout>
-
+        android:layout_height="match_parent">
     <include layout="@layout/content_navi" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
