--- a/app/src/main/res/layout/app_bar_navi.xml
+++ b/app/src/main/res/layout/app_bar_navi.xml
@@ -16,7 +16,7 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/btn_add"
         android:layout_width="72dp"
         android:layout_height="68dp"
         android:layout_margin="10dp"
